chatMessageList scrollbar bug fix

--- a/src/public/gamePackages/sc2mafia/public/index.css
+++ b/src/public/gamePackages/sc2mafia/public/index.css
@@ -337,6 +337,7 @@ button[disabled]:active{
     border-color: rgba(255, 255, 255, 0.1);
     border-radius: 0.5em;
     padding: 0.1em;
+    max-height: 100%;
 }
 .roleContainer span:hover{
     background-color: #123956;
